z-index fix

--- a/wp-content/themes/special/static/css/_home.scss
+++ b/wp-content/themes/special/static/css/_home.scss
@@ -31,7 +31,7 @@
       padding: 8em 6em 8em 8em;
       width:27em;
       margin-top:-32%;
-      z-index:-1;
+      z-index:1;
       background:rgba($medium-blue-gray, 0.5);
       border:1px solid rgba($light-blue, .35);
       padding: 8em 6em 8em 8em;
